':valid' CSS selector should not be applied to some form controls https://bugs.webkit.org/show_bug.cgi?id=39162

Reviewed by Darin Adler.

WebCore:

* html/HTMLElement.cpp:
(WebCore::inlineTagList): Always includes progressTag. This change is
needed in a case of no ENABLE_PROGRESS_TAG. Without this change and
ENABLE_PROGRESS_TAG, <progress> tags disappear.
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::recalcWillValidate):
  Return false for SUBMIT and IMAGE.
* html/HTMLProgressElement.h:
(WebCore::HTMLProgressElement::recalcWillValidate):
  Return false. This change is needed in a case of ENABLE_PROGRESS_TAG.

LayoutTests:

Add test cases for
 - <input type=submit>
 - <input type=image>
 - <progress>
 - <meter>

* fast/css/pseudo-valid-unapplied-expected.txt:
* fast/css/pseudo-valid-unapplied.html:

Canonical link: https://commits.webkit.org/50781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59645 268f45cc-cd09-0410-ab3c-d52691b4dbfc