WebCore/html/HTMLElement.cpp
@@ -858,9 +858,7 @@ static HashSet<AtomicStringImpl*>* inlineTagList()
         tagList.add(rpTag.localName().impl());
         tagList.add(rtTag.localName().impl());
         tagList.add(rubyTag.localName().impl());
-#if ENABLE(PROGRESS_TAG)
         tagList.add(progressTag.localName().impl());
-#endif
         tagList.add(meterTag.localName().impl());
     }
     return &tagList;
