WebCore/html/HTMLInputElement.cpp
@@ -2634,8 +2634,36 @@ void HTMLInputElement::addSubresourceAttributeURLs(ListHashSet<KURL>& urls) cons
 
 bool HTMLInputElement::recalcWillValidate() const
 {
-    return HTMLFormControlElementWithState::recalcWillValidate()
-        && inputType() != HIDDEN && inputType() != BUTTON && inputType() != RESET;
+    switch (inputType()) {
+    case CHECKBOX:
+    case COLOR:
+    case DATE:
+    case DATETIME:
+    case DATETIMELOCAL:
+    case EMAIL:
+    case FILE:
+    case ISINDEX:
+    case MONTH:
+    case NUMBER:
+    case PASSWORD:
+    case RADIO:
+    case RANGE:
+    case SEARCH:
+    case TELEPHONE:
+    case TEXT:
+    case TIME:
+    case URL:
+    case WEEK:
+        return HTMLFormControlElementWithState::recalcWillValidate();
+    case BUTTON:
+    case HIDDEN:
+    case IMAGE:
+    case RESET:
+    case SUBMIT:
+        return false;
+    }
+    ASSERT_NOT_REACHED();
+    return false;
 }
 
 bool HTMLInputElement::parseToDateComponents(InputType type, const String& formString, DateComponents* out)
